<resources>
    <string name="app_name">Diets App</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_logout">Logout</string>
    <string name="title_food_information">Food Information</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab1_title">Community</string>
    <string name="tab2_title">Favourites</string>
    <string name="tab3_title">Tab 3</string>

    <string name="main_drawer_item_community_breakfasts">Community Breakfasts</string>
    <string name="main_drawer_item_community_lunches">Community Lunches</string>
    <string name="main_drawer_item_community_dinners">Community Dinners</string>
    <string name="main_drawer_item_community_daily_diet">Community Daily Diet Plan</string>
    <string name="main_drawer_additional">Additional</string>
    <string name="main_drawer_item_snacks">Snacks</string>
    <string name="main_drawer_item_drinks_cocktails">Drinks/Cocktails</string>

    <string name="camera">Camera</string>
    <string name="save">Save</string>
    <string name="update_password">Password</string>
    <string name="title_activity_filter">FilterActivity</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="title_activity_main4">Main4Activity</string>

    <string name="which_time_dinner">Dinner</string>
    <string name="which_time_lunch">Lunch</string>
    <string name="which_time_snacks">Snacks</string>
    <string name="which_time_drinks">Drinks</string>
    <string name="which_time_breakfast">Breakfast</string>
    <string name="shared_dinners">SharedDinners</string>
    <string name="shared_lunches">SharedLunches</string>
    <string name="shared_snacks">SharedSnacks</string>
    <string name="shared_drinks">SharedDrinks</string>
    <string name="shared_breakfasts">SharedBreakfasts</string>
    <string name="shared_pref_user_id">userId</string>
    <string name="favourites_to_be_added">Favourites to be added soon!</string>
    <string name="email_required_error">Email is required!</string>
    <string name="password_required_error">Password required!</string>
    <string name="fiilter_any">Any</string>
    <string name="protein_display_text">Protein</string>
    <string name="carbos_display_text">Carbos</string>
    <string name="fats_display_text">Fats</string>
    <string name="calories_display_text">Calories</string>
    <string name="which_time_key">foodselection</string>
    <string name="which_title_key">titlename</string>
    <string name="filter_dialog_tag">FilterDialog</string>
    <string name="verify_email_error">You need to verify your email</string>
    <string name="unknown_user_name">unknown</string>
    <string name="successful_regiser_verify_toast">Successfully registered, verify user</string>
    <string name="password_short_error">The Password is too short</string>
    <string name="email_is_badly_formatted_error">The Email is badly formatted</string>
    <string name="email_is_already_in_use_error">The Email is already in Use</string>
    <string name="verification_email_send_to">Verification email sent to</string>
    <string name="request_date_key">requestdate</string>
    <string name="shared_food_list_database_key">SharedFoodListDatabase</string>
    <string name="server_issue_error_toast">Server issue</string>
    <string name="food_id_query_search">id</string>
    <string name="food_name_bundle_key">foodname</string>
    <string name="shared_prefs_query_string_key_widget">query_widget</string>
    <string name="shared_prefs_which_time_key_widget">whichtime_widget</string>
    <string name="track_in_your_widget_toast">Track in your widget</string>
    <string name="currently_not_available_toast">Currently Not Available</string>
    <string name="can_add_food_only_today_message">Can add food only to today!</string>
    <string name="fragment_tag_main_activity_search_display">SEARCH_FRAGMENT_DISPLAY_MAIN_ACTIVITY_TAG</string>
    <string name="successfully_sign_out">succesfully Sign out</string>
    <string name="try_again_toast">Try again</string>
    <string name="title_community_breakfasts">Community Breakfasts</string>
    <string name="title_community_dinners">Community Dinners</string>
    <string name="title_community_lunches">Community Lunches</string>
    <string name="currently_not_available_message">Currently Not Available</string>
    <string name="title_community_snacks">Snacks</string>
    <string name="title_community_drinks">Drinks/Coctails</string>
    <string name="food_id_bundle_key">id</string>
    <string name="cant_share_todays_diet_message">Can only share Today\'s diet</string>
    <string name="cant_share_empty_diet_message">Can\'t share empty Diet</string>
    <string name="share_update_diet">SHARE/UPDATE DIET</string>
    <string name="no_results_found">No results found</string>
    <string name="hint_password">password</string>
    <string name="login_button">LOGIN</string>
    <string name="email_hint">email</string>
    <string name="verify_email_button">VERIFY EMAIL</string>
    <string name="filter_data_button">FilterData</string>
    <string name="add_food_button">Add food</string>
    <string name="dinner_button_name">Dinner</string>
    <string name="lunch_button_name">Lunch</string>
    <string name="breakfast_food_name">Breakfast</string>
    <string name="snacks_button_name">Snacks</string>
    <string name="whole_day_button_name">Whole Day</string>
    <string name="drinks_button_name">Drinks/Coctails</string>
    <string name="drinks_floating_action">Drinks</string>
    <string name="breakfast_floating_action">Breakfast</string>
    <string name="lunch_floating_action">Lunch</string>
    <string name="dinner_floating_action">Dinner</string>
    <string name="user_password_and_name">User password and Name</string>
    <string name="register_button">REGISTER</string>
    <string name="any_filter_text">Any</string>
    <string name="snacks_floating_action">Snacks</string>
    <string name="can_only_add_food_today_toast">Can add food only to today!</string>
    <string name="lunch_selection_content_description">Select lunch for today</string>
    <string name="content_secription_fab_drinks">Select drink for today</string>
    <string name="select_snacks_for_today">Select snacks for today</string>
    <string name="breakfast_content_description">Select breakfast for today</string>
    <string name="dinner_content_description">Select dinner for today</string>
    <string name="fab_main_content_description">Tap to select which meal you want to add</string>
    <string name="name_of_food_food_item">Name of Food</string>
    <string name="select_particular_food_to_see_information_content_description">Select particular food to see information</string>

</resources>
