<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
    android:layout_width="match_parent"
    android:padding="2dp"
        android:layout_marginTop="56dp"
    android:baselineAligned="false"
    android:gravity="center_horizontal|center_vertical|center"
    android:layout_height="wrap_content">

    <TableLayout
        android:layout_width="fill_parent"
        android:baselineAligned="false"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:layout_height="0dp">

    <Button
        android:id="@+id/btndinner"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:layout_margin="4dp"
        android:background="@color/colorPrimary"
        android:text="@string/dinner_button_name" />

    <Button
        android:id="@+id/btnlunch"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_width="0dp"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:layout_weight="1"
        android:layout_margin="4dp"
        android:text="@string/lunch_button_name" />

    <Button
        android:id="@+id/btnbreakfast"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:layout_margin="4dp"
        android:background="@color/colorPrimary"
        android:layout_width="0dp"
        android:text="@string/breakfast_food_name" />


        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:baselineAligned="false"
            android:layout_height="0dp">
            <Button
                android:id="@+id/btnscancks"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_margin="4dp"
                android:textColor="@color/white"
                android:background="@color/colorPrimary"
                android:layout_weight="1"
                android:text="@string/snacks_button_name" />

            <Button
                android:id="@+id/btndaily"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_margin="4dp"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:background="@color/colorPrimary"
                android:layout_weight="1"
                android:text="@string/whole_day_button_name" />

            <Button
                android:id="@+id/btndrinks"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_margin="4dp"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:background="@color/colorPrimary"
                android:layout_weight="1"
                android:text="@string/drinks_button_name" />


        </TableRow>

    </TableLayout>
    
</RelativeLayout>
</layout>