<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_layout"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="4">

    <EditText
        android:id="@+id/email_field_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_weight="1"
        android:textColorHint="@color/colorPrimary"
        android:hint="@string/email_hint"
        android:textColorHighlight="@color/colorPrimary"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="@+id/password_field_edit_text"
        app:layout_constraintEnd_toStartOf="@+id/password_field_edit_text"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/password_field_edit_text"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/password_field_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textColorHint="@color/colorPrimary"
        android:layout_marginStart="16dp"
        android:layout_marginTop="120dp"
        android:textColorHighlight="@color/colorPrimary"
        android:layout_weight="1"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@+id/email_field_edit_text"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/register_account_with_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="24dp"
        android:text="@string/register_button"
        android:layout_marginRight="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:layout_weight="1"
        android:background="@color/colorAccent"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_field_edit_text" />

    <LinearLayout
        android:id="@+id/signed_in_buttons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:visibility="visible"
        android:weightSum="2.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_account_with_name">


        <Button
            android:id="@+id/verify_email_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:visibility="gone"
            android:background="@color/colorPrimaryDark"
            android:text="@string/verify_email_button" />

    </LinearLayout>

    </android.support.constraint.ConstraintLayout>
