<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical|center_horizontal|center"
    android:orientation="vertical"
    android:focusable="true">


    <EditText
        android:id="@+id/email_field_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_weight="1"
        android:textColorHint="@color/colorPrimary"
        android:hint="@string/email_hint"
        android:textColorHighlight="@color/colorPrimary"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="@+id/password_field_edit_text"
        app:layout_constraintEnd_toStartOf="@+id/password_field_edit_text"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/password_field_edit_text"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/password_field_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textColorHint="@color/colorPrimary"
        android:layout_marginStart="16dp"
        android:layout_marginTop="120dp"
        android:textColorHighlight="@color/colorPrimary"
        android:layout_weight="1"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@+id/email_field_edit_text"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/email_sign_in_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="24dp"
        android:text="@string/login_button"
        android:layout_marginRight="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:layout_weight="1"
        android:background="@color/colorAccent"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_field_edit_text" />


    </android.support.constraint.ConstraintLayout>